test/constrained-generics/hashable/wrong-return-type-explicit.chpl
record R : hashable {
    proc hash(): int {
        return 0;
    }
}
